--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
 	"private": true,
 	"main": "public/main.js",
 	"dependencies": {
+		"@tailwindcss/cli": "^4.1.4",
+		"@tailwindcss/postcss": "^4.1.4",
 		"@testing-library/jest-dom": "^5.17.0",
 		"@testing-library/react": "^13.4.0",
 		"@testing-library/user-event": "^13.5.0",
@@ -12,27 +14,38 @@
 		"@types/react": "^18.2.31",
 		"@types/react-dom": "^18.2.14",
 		"axios": "^1.6.1",
+		"classnames": "^2.5.1",
+		"clsx": "^2.1.1",
+		"lucide-react": "^0.503.0",
+		"motion": "^12.9.2",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
 		"react-query": "^3.39.3",
 		"react-scripts": "5.0.1",
 		"react-virtualized": "^9.22.5",
+		"tailwind-merge": "^3.2.0",
 		"typescript": "^4.9.5",
-		"web-vitals": "^2.1.4"
+		"web-vitals": "^2.1.4",
+		"zustand": "^5.0.3"
 	},
 	"_moduleAliases": {
-		"@components": "src/components"
+		"@": "src"
 	},
 	"devDependencies": {
 		"@types/react-virtualized": "^9.21.26",
+		"@vitejs/plugin-react": "^4.4.1",
+		"autoprefixer": "^10.4.21",
 		"daisyui": "^3.9.3",
 		"electron": "^27.0.2",
-		"tailwindcss": "^3.3.3"
+		"postcss": "^8.5.3",
+		"tailwindcss": "^3.4.17",
+		"vite": "^6.3.3"
 	},
 	"scripts": {
-		"start": "react-scripts start",
-		"build": "react-scripts build",
-		"test": "react-scripts test",
+		"dev": "vite",
+		"build": "vite build",
+		"preview": "vite preview",
+		"test": "vitest",
 		"eject": "react-scripts eject",
 		"electron-dev": "electron ."
 	},
